# HPCCG

./: .gitignore  HPCCG.cpp  HPCCG.hpp  HPC_Sparse_Matrix.cpp  HPC_Sparse_Matrix.hpp  HPC_sparsemv.cpp  HPC_sparsemv.hpp  README.md  compute_residual.cpp  compute_residual.hpp  ddot.cpp  ddot.hpp  exchange_externals.cpp  exchange_externals.hpp  generate_matrix.cpp  generate_matrix.hpp  main.cpp  make_local_matrix.cpp  waxpby.cpp  waxpby.hpp
.daisy/: hpccg.yml  hpccg_cuda.yml  hpccg_tenstorrent.yml
tenstorrent/rtl/: CMakeLists.txt
tenstorrent/rtl/kernels/: mat_vec_compute_matmul.cpp  mat_vec_compute_naive.cpp  mat_vec_compute_parts.hpp  mat_vec_reader_collection.cpp  mat_vec_reader_naive.cpp  vec_bare_result_wb.cpp  vec_diag_result_wb.cpp
tenstorrent/rtl/lib/: ellpack_matVec.cpp  ellpack_matVec.hpp  tt_device_holder.cpp  tt_device_holder.hpp
